--- a/.github/workflows/ci-ladybug-blender-build.yml
+++ b/.github/workflows/ci-ladybug-blender-build.yml
@@ -29,6 +29,7 @@ jobs:
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
           python-version: '3.11'
       - run: sudo apt install 2to3
+      - run: sudo apt install imagemagick
       - run: echo ${{ env.DATE }}
       - name: Get current date
         id: date
